fix alignment

--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -700,3 +700,13 @@ a:active {
 }
 
 
+.text-container-dashboard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 6vh;
+
+    p {
+        margin: 0 !important;
+    }
+}
